@@ -1,6 +1,13 @@
-## v.0.6.3
-
+## CHANGES
 ---
+
+## Update v.0.6.4
+* Added support for standalone Percolator results for v.3.0.5.
+* Organize the project in identical manner, include one psms.txt for target psms (output of Percolator -m tag) in each percolator folder.
+* When using standalone Percolator dist, peptide masses are calculated de novo
+
+
+## Update v.0.6.3
 * Fixed an issue where mbr all-NaN slice causes an error
 * Changed project directory structure so that mzml files have to be within an mzml subfolder and percolator files
 are in the percolator folder
